# home_app

./: .gitignore  README.md
home/arduino_codebase/: balk_esp8266.ino  balk_esp8266_robodyn_r3_uno_wifi.ino  balk_pico2w.ino  balk_remote_nano328.ino  cykelrum_esp8266.ino  hid_d1mini.ino  hid_esp32.ino
home/backend/private/: docker-compose.yml  gen_db.py  ssh_upload.py
home/backend/private/appdata/: cfg_schema.py  internal_shared.py  shared.py
home/backend/public/: docker-compose.yml  le_certs.sh
home/frontend/svelte_app/: package-lock.json  svelte.config.js
home/frontend/svelte_app/src/: app.html  hooks.server.ts
home_node/arduino_codebase/: asp.ino  balk_arduino_robodyn_r3_uno_wifi.ino  balk_esp8266.ino
home_node/backend/private/: api_cache_client.py  docker-compose.yml  ssh_upload.py  test_client_cache.py  test_client_db.py  todo
home_node/backend/private/appdata/: _additional_surreal.py  cfg_schema.py  distrilock_client.py  surreal.py
home_node/backend/private/services/ntp_server/: Cargo.toml  Dockerfile
home_node/backend/public/: docker-compose.yml  ssh_upload.py
home_node/frontend/svelte_app/: package.json  server.py  vite.config.js
home_node/frontend/svelte_app/src/: app.d.ts
remote/landet/: docker-compose.yml
remote/landet/appdata/: cfg_schema.py
remote/landet/services/mqtt/: go-auth.cfg
remote/landet/services/mqtt_auth_proxy/: requirements.txt  utils.py
remote/landet_node/: uvloop_base.dockerfile  wlan_restart_script
remote_nodes/landet_node/: ssh_upload.py
remote_nodes/landet_node/arduino_codebase/: landet_esp8266.ino
(+228 files in other folders)
