[package]
name = "ntp_server"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
debug = false
lto = true
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "*"
unsafe_unwrap = "*"
